--- a/config/locales/models.pt-BR.yml
+++ b/config/locales/models.pt-BR.yml
@@ -1,12 +1,18 @@
 'pt-BR':
   activerecord:
     models:
-      admin: 
+      admin:
         one: Administrador
         other: Administradores
       user:
         one: Usuário
-        other: Usuários   
+        other: Usuários
+      subject:
+        one: Assunto
+        other: Assuntos
+      question:
+        one: Pergunta
+        other: Perguntas
     attributes:
       admin:
         id: Código
@@ -14,9 +20,21 @@
         password: Senha
         password_confirmation: Confirmação da Senha
         created_at: Criado em
-        update_at: Atualizado em
+        updated_at: Atualizado em
       user:
         id: Código
         email: Email
         created_at: Criado em
-        update_at: Atualizado em  
+        updated_at: Atualizado em
+      subject:
+        id: Código
+        description: Descrição
+        created_at: Criado em
+        updated_at: Atualizado em
+      question:
+        id: Código
+        description: Descrição
+        subject: Assunto
+        subject_id: Assunto
+        created_at: Criado em
+        updated_at: Atualizado em
